--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <label for="email" class="form-label">Email</label>
               <input type="email" class="form-control" id="email" required>
               <div class="invalid-feedback">
-                Debe ingresar un email.
+                Debe ingresar un email válido.
               </div>
             </div>
 
